--- a/css/_svg.scss
+++ b/css/_svg.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Delius+Swash+Caps');
+@import 'f5-12';
 
 #Layer_1 {
 
@@ -15,7 +16,7 @@
   }
 }
 
-#scene-01 {
+#frame1to4 {
   .cls-1 {
     fill: none;
   }
@@ -505,5 +506,4 @@
   .cls-119 {
     opacity: 0.47;
   }
-
 }
