--- a/css/_svg.scss
+++ b/css/_svg.scss
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Delius+Swash+Caps');
 @import 'f1-4';
-@import 'f5-12';
+@import 'f5-8';
+@import 'f9-12';
 @import 'f13-16';
+@import 'f17-18';
+@import 'f19-20';
+@import 'f21-22';
+@import 'f23-24';
+@import 'f25-27';
 
 #Layer_1 {
 
@@ -15,6 +21,33 @@
 
   .cls-2 {
     fill-rule: evenodd;
+  }
+}
+
+#frame1to4,
+#frame5to8,
+#frame9to12,
+#frame13to16,
+#frame17to18,
+#frame19to20,
+#frame21to22,
+#frame23to24,
+#frame25to27 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+#frame5to8,
+#frame9to12,
+#frame13to16,
+#frame17to18,
+#frame19to20,
+#frame21to22,
+#frame23to24,
+#frame25to27 {
+  #bg {
+    visibility: hidden;
   }
 }
 
